samples/_failures_safe/1761005740_7a6ff8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9aca0194.c: In function ‘main’:
./samples/SAFE/__tmp_9aca0194.c:187:5: error: expected declaration or statement at end of input
  187 |     printf("State Machine Demo\n");
      |     ^~~~~~
